lab9/lab9.output
Grammar

    0 $accept: Program $end

    1 Program: Declaration_List

    2 Declaration_List: Declaration
    3                 | Declaration Declaration_List

    4 Declaration: Var_Declaration
    5            | Fun_Declaration

    6 Var_Declaration: Type_Specifier Var_List ';'

    7 Var_List: T_ID
    8         | T_ID '[' T_NUM ']'
    9         | T_ID ',' Var_List
   10         | T_ID '[' T_NUM ']' ',' Var_List

   11 Type_Specifier: T_INT
   12               | T_BOOLEAN
   13               | T_VOID

   14 $@1: ε

   15 $@2: ε

   16 Fun_Declaration: Type_Specifier T_ID '(' $@1 Params ')' $@2 Compound_Stmt

   17 Params: T_VOID
   18       | Param_List

   19 Param_List: Param
   20           | Param ',' Param_List

   21 Param: Type_Specifier T_ID
   22      | Type_Specifier T_ID '[' ']'

   23 $@3: ε

   24 Compound_Stmt: T_BEGIN $@3 Local_Declarations Statement_List T_END

   25 Local_Declarations: Var_Declaration Local_Declarations
   26                   | ε

   27 Statement_List: ε
   28               | Statement Statement_List

   29 Statement: Expression_Stmt
   30          | Compound_Stmt
   31          | Selection_Stmt
   32          | Iteration_Stmt
   33          | Assignment_Stmt
   34          | Return_Stmt
   35          | Read_Stmt
   36          | Write_Stmt

   37 Expression_Stmt: Expr ';'
   38                | ';'

   39 Selection_Stmt: T_IF Expr T_THEN Statement T_ENDIF
   40               | T_IF Expr T_THEN Statement T_ELSE Statement T_ENDIF

   41 Iteration_Stmt: T_WHILE Expr T_DO Statement

   42 Assignment_Stmt: VARIABLE '=' Expr ';'

   43 Return_Stmt: T_RETURN Expr ';'
   44            | T_RETURN ';'

   45 Write_Stmt: T_WRITE Expr ';'

   46 Read_Stmt: T_READ VARIABLE ';'

   47 VARIABLE: T_ID
   48         | T_ID '[' Expr ']'

   49 Expr: Simple_Expression

   50 Simple_Expression: Additive_Expression
   51                  | Simple_Expression Rel_Op Additive_Expression

   52 Rel_Op: T_LE
   53       | T_LT
   54       | T_GT
   55       | T_GE
   56       | T_EQ
   57       | T_NE

   58 Additive_Expression: Term
   59                    | Additive_Expression Add_Op Term

   60 Add_Op: '+'
   61       | '-'

   62 Term: Factor
   63     | Term Mult_Op Factor

   64 Mult_Op: '*'
   65        | '/'
   66        | T_AND
   67        | T_OR

   68 Factor: '(' Expr ')'
   69       | T_NUM
   70       | T_STRING
   71       | VARIABLE
   72       | CALL
   73       | T_NOT Factor
   74       | T_FALSE
   75       | T_TRUE

   76 CALL: T_ID '(' Args ')'

   77 Args: Arg_list
   78     | ε

   79 Arg_list: Expr ',' Arg_list
   80         | Expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 16 68 76
    ')' (41) 16 68 76
    '*' (42) 64
    '+' (43) 60
    ',' (44) 9 10 20 79
    '-' (45) 61
    '/' (47) 65
    ';' (59) 6 37 38 42 43 44 45 46
    '=' (61) 42
    '[' (91) 8 10 22 48
    ']' (93) 8 10 22 48
    error (256)
    T_ID <string> (258) 7 8 9 10 16 21 22 47 48 76
    T_STRING <string> (259) 70
    T_NUM <value> (260) 8 10 69
    T_BOOLEAN (261) 12
    T_INT (262) 11
    T_READ (263) 46
    T_RETURN (264) 43 44
    T_VOID (265) 13 17
    T_WRITE (266) 45
    T_BEGIN (267) 24
    T_END (268) 24
    T_AND (269) 66
    T_OR (270) 67
    T_TRUE (271) 75
    T_FALSE (272) 74
    T_NOT (273) 73
    T_EQ (274) 56
    T_GE (275) 55
    T_GT (276) 54
    T_LE (277) 52
    T_LT (278) 53
    T_NE (279) 57
    T_IF (280) 39 40
    T_ELSE (281) 40
    T_WHILE (282) 41
    T_ENDIF (283) 39 40
    T_DO (284) 41
    T_THEN (285) 39 40


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    Program (43)
        on left: 1
        on right: 0
    Declaration_List <node> (44)
        on left: 2 3
        on right: 1 3
    Declaration <node> (45)
        on left: 4 5
        on right: 2 3
    Var_Declaration <node> (46)
        on left: 6
        on right: 4 25
    Var_List <node> (47)
        on left: 7 8 9 10
        on right: 6 9 10
    Type_Specifier <datatype> (48)
        on left: 11 12 13
        on right: 6 16 21 22
    Fun_Declaration <node> (49)
        on left: 16
        on right: 5
    $@1 (50)
        on left: 14
        on right: 16
    $@2 (51)
        on left: 15
        on right: 16
    Params <node> (52)
        on left: 17 18
        on right: 16
    Param_List <node> (53)
        on left: 19 20
        on right: 18 20
    Param <node> (54)
        on left: 21 22
        on right: 19 20
    Compound_Stmt <node> (55)
        on left: 24
        on right: 16 30
    $@3 (56)
        on left: 23
        on right: 24
    Local_Declarations <node> (57)
        on left: 25 26
        on right: 24 25
    Statement_List <node> (58)
        on left: 27 28
        on right: 24 28
    Statement <node> (59)
        on left: 29 30 31 32 33 34 35 36
        on right: 28 39 40 41
    Expression_Stmt <node> (60)
        on left: 37 38
        on right: 29
    Selection_Stmt <node> (61)
        on left: 39 40
        on right: 31
    Iteration_Stmt <node> (62)
        on left: 41
        on right: 32
    Assignment_Stmt <node> (63)
        on left: 42
        on right: 33
    Return_Stmt <node> (64)
        on left: 43 44
        on right: 34
    Write_Stmt <node> (65)
        on left: 45
        on right: 36
    Read_Stmt <node> (66)
        on left: 46
        on right: 35
    VARIABLE <node> (67)
        on left: 47 48
        on right: 42 46 71
    Expr <node> (68)
        on left: 49
        on right: 37 39 40 41 42 43 45 48 68 79 80
    Simple_Expression <node> (69)
        on left: 50 51
        on right: 49 51
    Rel_Op <operator> (70)
        on left: 52 53 54 55 56 57
        on right: 51
    Additive_Expression <node> (71)
        on left: 58 59
        on right: 50 51 59
    Add_Op <operator> (72)
        on left: 60 61
        on right: 59
    Term <node> (73)
        on left: 62 63
        on right: 58 59 63
    Mult_Op <operator> (74)
        on left: 64 65 66 67
        on right: 63
    Factor <node> (75)
        on left: 68 69 70 71 72 73 74 75
        on right: 62 63 73
    CALL <node> (76)
        on left: 76
        on right: 72
    Args <node> (77)
        on left: 77 78
        on right: 76
    Arg_list <node> (78)
        on left: 79 80
        on right: 77 79


State 0

    0 $accept: • Program $end

    T_BOOLEAN  shift, and go to state 1
    T_INT      shift, and go to state 2
    T_VOID     shift, and go to state 3

    Program           go to state 4
    Declaration_List  go to state 5
    Declaration       go to state 6
    Var_Declaration   go to state 7
    Type_Specifier    go to state 8
    Fun_Declaration   go to state 9


State 1

   12 Type_Specifier: T_BOOLEAN •

    $default  reduce using rule 12 (Type_Specifier)


State 2

   11 Type_Specifier: T_INT •

    $default  reduce using rule 11 (Type_Specifier)


State 3

   13 Type_Specifier: T_VOID •

    $default  reduce using rule 13 (Type_Specifier)


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 10


State 5

    1 Program: Declaration_List •

    $default  reduce using rule 1 (Program)


State 6

    2 Declaration_List: Declaration •
    3                 | Declaration • Declaration_List

    T_BOOLEAN  shift, and go to state 1
    T_INT      shift, and go to state 2
    T_VOID     shift, and go to state 3

    $default  reduce using rule 2 (Declaration_List)

    Declaration_List  go to state 11
    Declaration       go to state 6
    Var_Declaration   go to state 7
    Type_Specifier    go to state 8
    Fun_Declaration   go to state 9


State 7

    4 Declaration: Var_Declaration •

    $default  reduce using rule 4 (Declaration)


State 8

    6 Var_Declaration: Type_Specifier • Var_List ';'
   16 Fun_Declaration: Type_Specifier • T_ID '(' $@1 Params ')' $@2 Compound_Stmt

    T_ID  shift, and go to state 12

    Var_List  go to state 13


State 9

    5 Declaration: Fun_Declaration •

    $default  reduce using rule 5 (Declaration)


State 10

    0 $accept: Program $end •

    $default  accept


State 11

    3 Declaration_List: Declaration Declaration_List •

    $default  reduce using rule 3 (Declaration_List)


State 12

    7 Var_List: T_ID •
    8         | T_ID • '[' T_NUM ']'
    9         | T_ID • ',' Var_List
   10         | T_ID • '[' T_NUM ']' ',' Var_List
   16 Fun_Declaration: Type_Specifier T_ID • '(' $@1 Params ')' $@2 Compound_Stmt

    '['  shift, and go to state 14
    ','  shift, and go to state 15
    '('  shift, and go to state 16

    $default  reduce using rule 7 (Var_List)


State 13

    6 Var_Declaration: Type_Specifier Var_List • ';'

    ';'  shift, and go to state 17


State 14

    8 Var_List: T_ID '[' • T_NUM ']'
   10         | T_ID '[' • T_NUM ']' ',' Var_List

    T_NUM  shift, and go to state 18


State 15

    9 Var_List: T_ID ',' • Var_List

    T_ID  shift, and go to state 19

    Var_List  go to state 20


State 16

   16 Fun_Declaration: Type_Specifier T_ID '(' • $@1 Params ')' $@2 Compound_Stmt

    $default  reduce using rule 14 ($@1)

    $@1  go to state 21


State 17

    6 Var_Declaration: Type_Specifier Var_List ';' •

    $default  reduce using rule 6 (Var_Declaration)


State 18

    8 Var_List: T_ID '[' T_NUM • ']'
   10         | T_ID '[' T_NUM • ']' ',' Var_List

    ']'  shift, and go to state 22


State 19

    7 Var_List: T_ID •
    8         | T_ID • '[' T_NUM ']'
    9         | T_ID • ',' Var_List
   10         | T_ID • '[' T_NUM ']' ',' Var_List

    '['  shift, and go to state 14
    ','  shift, and go to state 15

    $default  reduce using rule 7 (Var_List)


State 20

    9 Var_List: T_ID ',' Var_List •

    $default  reduce using rule 9 (Var_List)


State 21

   16 Fun_Declaration: Type_Specifier T_ID '(' $@1 • Params ')' $@2 Compound_Stmt

    T_BOOLEAN  shift, and go to state 1
    T_INT      shift, and go to state 2
    T_VOID     shift, and go to state 23

    Type_Specifier  go to state 24
    Params          go to state 25
    Param_List      go to state 26
    Param           go to state 27


State 22

    8 Var_List: T_ID '[' T_NUM ']' •
   10         | T_ID '[' T_NUM ']' • ',' Var_List

    ','  shift, and go to state 28

    $default  reduce using rule 8 (Var_List)


State 23

   13 Type_Specifier: T_VOID •
   17 Params: T_VOID •

    ')'       reduce using rule 17 (Params)
    $default  reduce using rule 13 (Type_Specifier)


State 24

   21 Param: Type_Specifier • T_ID
   22      | Type_Specifier • T_ID '[' ']'

    T_ID  shift, and go to state 29


State 25

   16 Fun_Declaration: Type_Specifier T_ID '(' $@1 Params • ')' $@2 Compound_Stmt

    ')'  shift, and go to state 30


State 26

   18 Params: Param_List •

    $default  reduce using rule 18 (Params)


State 27

   19 Param_List: Param •
   20           | Param • ',' Param_List

    ','  shift, and go to state 31

    $default  reduce using rule 19 (Param_List)


State 28

   10 Var_List: T_ID '[' T_NUM ']' ',' • Var_List

    T_ID  shift, and go to state 19

    Var_List  go to state 32


State 29

   21 Param: Type_Specifier T_ID •
   22      | Type_Specifier T_ID • '[' ']'

    '['  shift, and go to state 33

    $default  reduce using rule 21 (Param)


State 30

   16 Fun_Declaration: Type_Specifier T_ID '(' $@1 Params ')' • $@2 Compound_Stmt

    $default  reduce using rule 15 ($@2)

    $@2  go to state 34


State 31

   20 Param_List: Param ',' • Param_List

    T_BOOLEAN  shift, and go to state 1
    T_INT      shift, and go to state 2
    T_VOID     shift, and go to state 3

    Type_Specifier  go to state 24
    Param_List      go to state 35
    Param           go to state 27


State 32

   10 Var_List: T_ID '[' T_NUM ']' ',' Var_List •

    $default  reduce using rule 10 (Var_List)


State 33

   22 Param: Type_Specifier T_ID '[' • ']'

    ']'  shift, and go to state 36


State 34

   16 Fun_Declaration: Type_Specifier T_ID '(' $@1 Params ')' $@2 • Compound_Stmt

    T_BEGIN  shift, and go to state 37

    Compound_Stmt  go to state 38


State 35

   20 Param_List: Param ',' Param_List •

    $default  reduce using rule 20 (Param_List)


State 36

   22 Param: Type_Specifier T_ID '[' ']' •

    $default  reduce using rule 22 (Param)


State 37

   24 Compound_Stmt: T_BEGIN • $@3 Local_Declarations Statement_List T_END

    $default  reduce using rule 23 ($@3)

    $@3  go to state 39


State 38

   16 Fun_Declaration: Type_Specifier T_ID '(' $@1 Params ')' $@2 Compound_Stmt •

    $default  reduce using rule 16 (Fun_Declaration)


State 39

   24 Compound_Stmt: T_BEGIN $@3 • Local_Declarations Statement_List T_END

    T_BOOLEAN  shift, and go to state 1
    T_INT      shift, and go to state 2
    T_VOID     shift, and go to state 3

    $default  reduce using rule 26 (Local_Declarations)

    Var_Declaration     go to state 40
    Type_Specifier      go to state 41
    Local_Declarations  go to state 42


State 40

   25 Local_Declarations: Var_Declaration • Local_Declarations

    T_BOOLEAN  shift, and go to state 1
    T_INT      shift, and go to state 2
    T_VOID     shift, and go to state 3

    $default  reduce using rule 26 (Local_Declarations)

    Var_Declaration     go to state 40
    Type_Specifier      go to state 41
    Local_Declarations  go to state 43


State 41

    6 Var_Declaration: Type_Specifier • Var_List ';'

    T_ID  shift, and go to state 19

    Var_List  go to state 13


State 42

   24 Compound_Stmt: T_BEGIN $@3 Local_Declarations • Statement_List T_END

    T_ID      shift, and go to state 44
    T_STRING  shift, and go to state 45
    T_NUM     shift, and go to state 46
    T_READ    shift, and go to state 47
    T_RETURN  shift, and go to state 48
    T_WRITE   shift, and go to state 49
    T_BEGIN   shift, and go to state 37
    T_TRUE    shift, and go to state 50
    T_FALSE   shift, and go to state 51
    T_NOT     shift, and go to state 52
    T_IF      shift, and go to state 53
    T_WHILE   shift, and go to state 54
    ';'       shift, and go to state 55
    '('       shift, and go to state 56

    $default  reduce using rule 27 (Statement_List)

    Compound_Stmt        go to state 57
    Statement_List       go to state 58
    Statement            go to state 59
    Expression_Stmt      go to state 60
    Selection_Stmt       go to state 61
    Iteration_Stmt       go to state 62
    Assignment_Stmt      go to state 63
    Return_Stmt          go to state 64
    Write_Stmt           go to state 65
    Read_Stmt            go to state 66
    VARIABLE             go to state 67
    Expr                 go to state 68
    Simple_Expression    go to state 69
    Additive_Expression  go to state 70
    Term                 go to state 71
    Factor               go to state 72
    CALL                 go to state 73


State 43

   25 Local_Declarations: Var_Declaration Local_Declarations •

    $default  reduce using rule 25 (Local_Declarations)


State 44

   47 VARIABLE: T_ID •
   48         | T_ID • '[' Expr ']'
   76 CALL: T_ID • '(' Args ')'

    '['  shift, and go to state 74
    '('  shift, and go to state 75

    $default  reduce using rule 47 (VARIABLE)


State 45

   70 Factor: T_STRING •

    $default  reduce using rule 70 (Factor)


State 46

   69 Factor: T_NUM •

    $default  reduce using rule 69 (Factor)


State 47

   46 Read_Stmt: T_READ • VARIABLE ';'

    T_ID  shift, and go to state 76

    VARIABLE  go to state 77


State 48

   43 Return_Stmt: T_RETURN • Expr ';'
   44            | T_RETURN • ';'

    T_ID      shift, and go to state 44
    T_STRING  shift, and go to state 45
    T_NUM     shift, and go to state 46
    T_TRUE    shift, and go to state 50
    T_FALSE   shift, and go to state 51
    T_NOT     shift, and go to state 52
    ';'       shift, and go to state 78
    '('       shift, and go to state 56

    VARIABLE             go to state 79
    Expr                 go to state 80
    Simple_Expression    go to state 69
    Additive_Expression  go to state 70
    Term                 go to state 71
    Factor               go to state 72
    CALL                 go to state 73


State 49

   45 Write_Stmt: T_WRITE • Expr ';'

    T_ID      shift, and go to state 44
    T_STRING  shift, and go to state 45
    T_NUM     shift, and go to state 46
    T_TRUE    shift, and go to state 50
    T_FALSE   shift, and go to state 51
    T_NOT     shift, and go to state 52
    '('       shift, and go to state 56

    VARIABLE             go to state 79
    Expr                 go to state 81
    Simple_Expression    go to state 69
    Additive_Expression  go to state 70
    Term                 go to state 71
    Factor               go to state 72
    CALL                 go to state 73


State 50

   75 Factor: T_TRUE •

    $default  reduce using rule 75 (Factor)


State 51

   74 Factor: T_FALSE •

    $default  reduce using rule 74 (Factor)


State 52

   73 Factor: T_NOT • Factor

    T_ID      shift, and go to state 44
    T_STRING  shift, and go to state 45
    T_NUM     shift, and go to state 46
    T_TRUE    shift, and go to state 50
    T_FALSE   shift, and go to state 51
    T_NOT     shift, and go to state 52
    '('       shift, and go to state 56

    VARIABLE  go to state 79
    Factor    go to state 82
    CALL      go to state 73


State 53

   39 Selection_Stmt: T_IF • Expr T_THEN Statement T_ENDIF
   40               | T_IF • Expr T_THEN Statement T_ELSE Statement T_ENDIF

    T_ID      shift, and go to state 44
    T_STRING  shift, and go to state 45
    T_NUM     shift, and go to state 46
    T_TRUE    shift, and go to state 50
    T_FALSE   shift, and go to state 51
    T_NOT     shift, and go to state 52
    '('       shift, and go to state 56

    VARIABLE             go to state 79
    Expr                 go to state 83
    Simple_Expression    go to state 69
    Additive_Expression  go to state 70
    Term                 go to state 71
    Factor               go to state 72
    CALL                 go to state 73


State 54

   41 Iteration_Stmt: T_WHILE • Expr T_DO Statement

    T_ID      shift, and go to state 44
    T_STRING  shift, and go to state 45
    T_NUM     shift, and go to state 46
    T_TRUE    shift, and go to state 50
    T_FALSE   shift, and go to state 51
    T_NOT     shift, and go to state 52
    '('       shift, and go to state 56

    VARIABLE             go to state 79
    Expr                 go to state 84
    Simple_Expression    go to state 69
    Additive_Expression  go to state 70
    Term                 go to state 71
    Factor               go to state 72
    CALL                 go to state 73


State 55

   38 Expression_Stmt: ';' •

    $default  reduce using rule 38 (Expression_Stmt)


State 56

   68 Factor: '(' • Expr ')'

    T_ID      shift, and go to state 44
    T_STRING  shift, and go to state 45
    T_NUM     shift, and go to state 46
    T_TRUE    shift, and go to state 50
    T_FALSE   shift, and go to state 51
    T_NOT     shift, and go to state 52
    '('       shift, and go to state 56

    VARIABLE             go to state 79
    Expr                 go to state 85
    Simple_Expression    go to state 69
    Additive_Expression  go to state 70
    Term                 go to state 71
    Factor               go to state 72
    CALL                 go to state 73


State 57

   30 Statement: Compound_Stmt •

    $default  reduce using rule 30 (Statement)


State 58

   24 Compound_Stmt: T_BEGIN $@3 Local_Declarations Statement_List • T_END

    T_END  shift, and go to state 86


State 59

   28 Statement_List: Statement • Statement_List

    T_ID      shift, and go to state 44
    T_STRING  shift, and go to state 45
    T_NUM     shift, and go to state 46
    T_READ    shift, and go to state 47
    T_RETURN  shift, and go to state 48
    T_WRITE   shift, and go to state 49
    T_BEGIN   shift, and go to state 37
    T_TRUE    shift, and go to state 50
    T_FALSE   shift, and go to state 51
    T_NOT     shift, and go to state 52
    T_IF      shift, and go to state 53
    T_WHILE   shift, and go to state 54
    ';'       shift, and go to state 55
    '('       shift, and go to state 56

    $default  reduce using rule 27 (Statement_List)

    Compound_Stmt        go to state 57
    Statement_List       go to state 87
    Statement            go to state 59
    Expression_Stmt      go to state 60
    Selection_Stmt       go to state 61
    Iteration_Stmt       go to state 62
    Assignment_Stmt      go to state 63
    Return_Stmt          go to state 64
    Write_Stmt           go to state 65
    Read_Stmt            go to state 66
    VARIABLE             go to state 67
    Expr                 go to state 68
    Simple_Expression    go to state 69
    Additive_Expression  go to state 70
    Term                 go to state 71
    Factor               go to state 72
    CALL                 go to state 73


State 60

   29 Statement: Expression_Stmt •

    $default  reduce using rule 29 (Statement)


State 61

   31 Statement: Selection_Stmt •

    $default  reduce using rule 31 (Statement)


State 62

   32 Statement: Iteration_Stmt •

    $default  reduce using rule 32 (Statement)


State 63

   33 Statement: Assignment_Stmt •

    $default  reduce using rule 33 (Statement)


State 64

   34 Statement: Return_Stmt •

    $default  reduce using rule 34 (Statement)


State 65

   36 Statement: Write_Stmt •

    $default  reduce using rule 36 (Statement)


State 66

   35 Statement: Read_Stmt •

    $default  reduce using rule 35 (Statement)


State 67

   42 Assignment_Stmt: VARIABLE • '=' Expr ';'
   71 Factor: VARIABLE •

    '='  shift, and go to state 88

    $default  reduce using rule 71 (Factor)


State 68

   37 Expression_Stmt: Expr • ';'

    ';'  shift, and go to state 89


State 69

   49 Expr: Simple_Expression •
   51 Simple_Expression: Simple_Expression • Rel_Op Additive_Expression

    T_EQ  shift, and go to state 90
    T_GE  shift, and go to state 91
    T_GT  shift, and go to state 92
    T_LE  shift, and go to state 93
    T_LT  shift, and go to state 94
    T_NE  shift, and go to state 95

    $default  reduce using rule 49 (Expr)

    Rel_Op  go to state 96


State 70

   50 Simple_Expression: Additive_Expression •
   59 Additive_Expression: Additive_Expression • Add_Op Term

    '+'  shift, and go to state 97
    '-'  shift, and go to state 98

    $default  reduce using rule 50 (Simple_Expression)

    Add_Op  go to state 99


State 71

   58 Additive_Expression: Term •
   63 Term: Term • Mult_Op Factor

    T_AND  shift, and go to state 100
    T_OR   shift, and go to state 101
    '*'    shift, and go to state 102
    '/'    shift, and go to state 103
